Prep for 5.2.10 release

--- a/AUTHORS
+++ b/AUTHORS
@@ -68,6 +68,9 @@ Ian Young		<ian@iay.org.uk>
 Jean-Marc Verbavatz	<verbavatz@ifrance.fr>
 	Dithering and color management
 
+John Labovitz	      	<johnl@johnlabovitz.com>
+	Mac support
+
 Karl Heinz Kremer	<khk@khk.net>
 	Liaison with Epson
 	Engineering and design
