--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,5 @@
-Welcome to Gutenprint 5.2.10-pre2, a pre-release of Gutenprint
-5.2.10. Please read these release notes carefully.
+Welcome to Gutenprint 5.2.10, a stable release of Gutenprint
+5.2. Please read these release notes carefully.
 
 Gutenprint is a suite of printer drivers that may be used with most
 common UNIX print spooling systems, including CUPS, lpr, LPRng, or
@@ -9,7 +9,7 @@ Macintosh OS X (10.5 and above) systems.  Gutenprint includes CUPS and
 Foomatic drivers, and an enhanced Print plug-in for GIMP that replaces
 the print plug-in packaged with the GIMP distribution.
 
-Gutenprint 5.2 no longer supports Macintosh OS X 10.2, 10.3, or 10.4.
+Gutenprint 5.2.10 no longer supports Macintosh OS X 10.4 or earlier.
 
 *** NOTE TO PACKAGERS: Please read the file README.package for issues
     that are of interest to distributors and packagers of Gutenprint.
@@ -1118,6 +1118,63 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
 	SELPHY CP family.  We anticipate these models will be supported
 	in a subsequent Gutenprint release.
 
+     - Citizen Dye-Sublimation printers: 
+
+       Citizen CX
+       Citizen CX-W
+       Citizen CY
+
+         These models are identical to the DNP DS40, DS80, and DSRX1,
+	 respectively, and for best results should be used with the
+	 intelligent backend.
+       
+       Citizen CW-01
+       Citizen CW-02
+       Citizen OP900
+       Citizen OP900II
+
+         Support for these models is considered experimental; they have
+	 not yet been tested.  They are functionally identical to the
+	 Citizen CX.
+
+     - Dai Nippon Printing (DNP) printers:
+
+       DNP DS40
+       DNP DS80
+
+	Support for these printers has been considerably improved:
+ 
+	 * Addition of an intelligent CUPS backend
+	 * 5x7 and 3.5x5" print support on the DS40
+	 * Matte lamination with printer firmware 1.30 or newer
+	 * Improved margins making printable area more explicit
+	 * Support 300x600dpi print mode
+
+	If you have one of these printers we highly recommend you remove
+	and re-create your printer queue after upgrading.
+
+       DNP DSRX1
+
+         This printer is functionally identical to the DS40, except
+         it does not support 6x9 prints,
+
+     - Kodak Dye-Sublimation printers:
+
+       Kodak 1400
+       Kodak 805
+       Kodak 6800
+       Kodak 6850
+       Kodak 605
+
+	These Kodak models require an intelligent CUPS backend, 
+	which is bundled with Gutenprint.
+
+       Kodak 8500 (EXPERIMENTAL)	
+       Kodak 9810 (EXPERIMENTAL)
+
+	Neither of these models have been tested and confirmed to work 
+	(or not), so feedback is welcome.
+
      - Mitsubishi Dye-Sublimation printers:
 
        Mitsubishi CP9810D/DW
@@ -1144,23 +1201,6 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
 	The CP-D70DW and CP-D707DW (and likely the CP-K60DW) require use of 
 	an intelligent backend,	which is bundled with Gutenprint.
 
-     - Kodak Dye-Sublimation printers:
-
-       Kodak 1400
-       Kodak 805
-       Kodak 6800
-       Kodak 6850
-       Kodak 605
-
-	These Kodak models require an intelligent CUPS backend, 
-	which is bundled with Gutenprint.
-
-       Kodak 8500 (EXPERIMENTAL)	
-       Kodak 9810 (EXPERIMENTAL)
-
-	Neither of these models have been tested and confirmed to work 
-	(or not), so feedback is welcome.
-
      - Shinko/Sinfonia Dye-Sublimation printers:
 
        Shinko/Sinfonia CHC-S2145 (aka S2)
@@ -1179,46 +1219,6 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Sony UP-DR200
 
 	The Sony UP-DR200 requires the use of an intelligent CUPS backend.
-
-     - Dai Nippon Printing (DNP) printers:
-
-       DNP DS40
-       DNP DS80
-
-	Support for these printers has been considerably improved:
- 
-	 * Addition of an intelligent CUPS backend
-	 * 5x7 and 3.5x5" print support on the DS40
-	 * Matte lamination with printer firmware 1.30 or newer
-	 * Improved margins making printable area more explicit
-	 * Support 300x600dpi print mode
-
-	If you have one of these printers we highly recommend you remove
-	and re-create your printer queue after upgrading.
-
-       DNP DSRX1
-
-         This printer is functionally identical to the DS40, except
-         it does not support 6x9 prints,
-
-     - Citizen Dye-Sublimation printers: 
-
-       Citizen CX
-       Citizen CX-W
-       Citizen CY
-
-         These models are identical to the DNP DS40, DS80, and DSRX1,
-	 respectively, and for best results should be used with the
-	 intelligent backend.
-       
-       Citizen CW-01
-       Citizen CW-02
-       Citizen OP900
-       Citizen OP900II
-
-         Support for these models is considered experimental; they have
-	 not yet been tested.  They are functionally identical to the
-	 Citizen CX.
 
   3) The following Canon printer models were not added, as they cannot
      currently be supported, even experimentally, owing to an as-yet
@@ -1239,7 +1239,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        *1: protocol is supported but inks used are not yet supported
 
   4) Corrected page dimensions for borderless printing with Canon
-     printers.
+     inkjet printers.
 
   5) Added duplex support for the EPSON WorkForce 630, 635, and 645,
      and NX635
@@ -1248,6 +1248,9 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
      Stylus Pro 3800 and 3880.
 
   7) Added IEEE1284 device IDs for the following printers.
+
+     - Device IDs added for the following Brother printers:
+       Brother HL-2030 series
 
      - Device IDs added for the following Canon printers:
        Canon SELPHY ES1
@@ -1285,15 +1288,19 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon MP280 series (possibly incomplete)
        Canon MP450 series
 
+     - Device IDs added for the following Citizen printers:
+       Citizen CX
+
+     - Device IDs added for the following DNP printers:
+       DNP DS40
+       DNP DS80
+
      - Device IDs added for the following Epson printers:
        Epson Stylus Photo 1270
        Epson Stylus Photo R2400
        Epson Stylus C92
        Epson Stylus D78
        Epson Stylus Color 680
-
-     - Device IDs added for the following Bother printers:
-       Brother HL-2030 series
 
      - Device IDs added for the following Hewlett-Packard printers:
        HP Color LaserJet 2500
@@ -1307,9 +1314,6 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        HP LaserJet M3035 MFP (corrected)
        HP LaserJet P3005 (corrected)
 
-     - Device IDs added for the following Samsung printers:
-       Samsung ML-1450 (possibly incomplete)
-
      - Device IDs added for the following Kodak printers:
        Kodak 1400
        Kodak 605
@@ -1320,22 +1324,18 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
      - Device IDs added for the following Kyocera printers:
        Kyocera FS-1118MFP
 
+     - Device IDs added for the following Mitsubishi printers:
+       Mitsubishi CP-D70DW
+       Mitsubishi CP-D707DW
+
+     - Device IDs added for the following Samsung printers:
+       Samsung ML-1450 (possibly incomplete)
+
      - Device IDs added for the following Sony printers:
        Sony UP-DR150
 
      - Device IDs added for the following Shinko/Sinfonia printers:
        Shinko/Sinfonia CHC-S2145
-
-     - Device IDs added for the following Mitsubishi printers:
-       Mitsubishi CP-D70DW
-       Mitsubishi CP-D707DW
-
-     - Device IDs added for the following DNP printers:
-       DNP DS40
-       DNP DS80
-
-     - Device IDs added for the following Citizen printers:
-       Citizen CX
 
   8) Added Catalan, Turkish, and Vietnamese translations.
 
