--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Welcome to Gutenprint 5.2.10-pre2!  Please read these notes carefully.
+Welcome to Gutenprint 5.2.10!  Please read these notes carefully.
 
 *** NOTE TO PACKAGERS: Please read the file README.package for issues
     that are of interest to distributors and packagers of Gutenprint.
@@ -8,8 +8,8 @@ Welcome to Gutenprint 5.2.10-pre2!  Please read these notes carefully.
 
 I) INTRODUCTION
 
-    This is Gutenprint version 5.2.10-pre2, a prerelease of Gutenprint
-    5.2.10.  Gutenprint, formerly named Gimp-Print, is a suite of printer
+    This is Gutenprint version 5.2.10, a stable release of Gutenprint
+    5.2.  Gutenprint, formerly named Gimp-Print, is a suite of printer
     drivers that may be used with most common UNIX print spooling
     systems, including CUPS, lpr, LPRng, or others.  These drivers
     provide high quality printing for UNIX (including Macintosh OS X
@@ -398,8 +398,8 @@ C) CUPS
     like /etc/init.d/cups restart, /etc/software/init.d/cups restart,
     /etc/rc.d/cups restart, /usr/sbin/rccups, or even
     /etc/rc.d/init.d/cups restart.  Your system may have a different
-    way to restart the CUPS server.  OS X (10.4 and 10.5), for
-    example, uses the following command:
+    way to restart the CUPS server.  OS X (10.5), for example, uses
+    the following command:
 
     sudo /System/Library/StartupItems/PrintingServices/PrintingServices.sh restart
 
